no longer collapsing descriptions

--- a/apps/site/web/static/css/_alerts.scss
+++ b/apps/site/web/static/css/_alerts.scss
@@ -78,30 +78,6 @@
   font-size: $font-size-sm;
 }
 
-.card-description-first {
-  display: inline;
-}
-
-.card-description-rest.in,
-.card-description-rest.collapsing {
-  display: inline;
-  margin-left: -2px;
-}
-
-.collapse ~ .btn.show-alert:before {
-  content: "View More";
-}
-
-.in.collapse ~ .btn.show-alert:before,
-.collapsing ~ .btn.show-alert:before {
-  content: "View Less";
-}
-
-.in.collapse ~ .card-description-ellipsis,
-.collapsing ~ .card-description-ellipsis {
-  display: none;
-}
-
 .alerts-modal-button {
   margin-bottom: 10px;
   text-align: left;
